# django_ticketease

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/bookings/: models.py  tests.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_booking_event.py  (+1 more)
apps/events/: models.py  serializers.py  tests.py  urls.py  views.py
apps/movies/: admin.py  models.py  tests.py  urls.py  views.py
apps/notifications/: services.py  utils.py  views.py
apps/payments/: models.py  tests.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
config/: settings.py  urls.py  views.py
static/css/: style.css
static/js/: base.js  cancel.js  login.js  registration_success.js  success.js
staticfiles/css/: style.css
templates/: base.html  book_event.html  booking_confirmation.html  contact_us.html  events_detail.html  events_list.html  faq.html  home.html  movies_detail.html  movies_list.html  payments.html  privacy.html  register.html  seat_selection.html  terms.html
templates/bookings/: booking_success.html  booking_success_event.html  confirm_booking.html  my_bookings.html
templates/events/: book_event.html  events_detail.html  events_list.html
templates/movies/: book_movie.html  movie_detail.html  movie_list.html  select_seats.html
templates/payments/: cancel.html  success.html
templates/registration/: forgot_password.html  login.html  password_reset_done.html  password_reset_email.html  registration_success.html  signup.html
templates/users/: dashboard.html  edit_profile.html
(+38 files in other folders)
